charts/demo-app/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: demo-app-destrule
  namespace: demo-app
spec:
  host: demo-app
  subnets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
